--- a/Tugas 3/Tugas_3.html
+++ b/Tugas 3/Tugas_3.html
@@ -1,4 +1,4 @@
-<img src="Kebun Binatang.jpg" alt="background">
+<img src="https://raw.githubusercontent.com/username/repo/main/img/Kebun Binatang.jpg" alt="Deskripsi">
 
 <!DOCTYPE html>
 <html lang="id">
