Update1 Tugas_3.html

--- a/Tugas 3/Tugas_3.html
+++ b/Tugas 3/Tugas_3.html
@@ -13,7 +13,7 @@
             text-align: center;
         }
         .title-container {
-            background: rgba(0, 0, 0, 0.9);
+            background-image: rgba(0, 0, 0, 0.9);
             color: white;
             padding: 25px;
             border-radius: 10px;
